--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,12 @@
     <div class="main">
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
+      <form action="">
+        <input type="text" name="ccname" class="input" autocomplete="cc-name" />
+        <input type="number" name="cardnumber" class="input" autocomplete="cc-number" />
+        <input type="number" name="cvc" class="input" />
+        <input type="number" name="cc-exp" class="input" autocomplete="cc-exp">
+      </form>
     </div>
   </body>
 </html>
